[gd_scene load_steps=6 format=2]

[ext_resource path="res://scene/Gun.gd" type="Script" id=1]
[ext_resource path="res://image/OTTT.png" type="Texture" id=2]
[ext_resource path="res://sound/m1-garand-rifle-80192.mp3" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.0

[node name="Gun" type="Node2D"]
script = ExtResource( 1 )

[node name="GunAnim" type="AnimatedSprite" parent="."]
scale = Vector2( 0.1, 0.1 )
frames = SubResource( 1 )

[node name="GunArea" type="Area2D" parent="." groups=["player"]]

[node name="GunColli" type="CollisionShape2D" parent="GunArea"]
shape = SubResource( 2 )

[node name="GunLingerTime" type="Timer" parent="."]
wait_time = 0.05

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="GunLingerTime" to="." method="_on_GunLingerTime_timeout"]
[connection signal="finished" from="ShotSound" to="." method="_on_ShotSound_finished"]
